# Owl-Racer-AI-Client-Python

./: .envtemplate  .gitignore  README.md  protoC_script.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_train.txt
data/: Data_Track0_1108.csv  Data_Track1_1108.csv  Data_Track2_1108.csv  data_track0_07-05-2024_normal-mode.csv
examples/: saveCarData.py  simpleML_DT.py  simpleML_RF.py
examples/play/: RuleBasedEngine.py  drive_circles.py  simpleML.py  simpleML_DNN.py  simpleML_DecisionTree.py  simpleML_dev.py
examples/train/: datachange.yaml  hyperopt_tune_sklearn.py  labelmap.yaml  labelmap_dev.yaml  model_config.yaml  owlracer_dataset.py  owlracer_dataset_dev.py  params.yaml  shared.py  shared_train_functions.py  train_pytorch.py  train_pytorch_dev.py  (+2 more)
exsamples/: drive_circles.py  hyperopt.py  simpleML_DT.py  simpleML_RF.py
hidden/: requirements_older_version.txt
jupyter/: Onnx Testing.ipynb  plot_complex_pipeline.ipynb
jupyter_deprecated/: Onnx Testing.ipynb  plot_complex_pipeline.ipynb
lib/: README.md  setup.cfg
lib/src/owlracer/: __init__.py  env.py
lib/src/owlracer/grpcClient/: __init__.py  converter.py  core_pb2_grpc.py  grpcConnector.py
lib/src/owlracer/matlabs/: __init__.py
lib/src/owlracer/matlabs/owlracer/: __init__.py  core_pb2.py
lib/src/owlracer/services/: __init__.py  car.py  session.py
pytorch/: Owlracer_Dataset.py  Training.py  simpleMLTorch.py  simpleMLTorch_DNN.py  simpleMLTorch_ResNet.py
trainedModels/: DNN-v1.onnx  DecisionTreeClassifier-v1.onnx  ResNet.onnx  labelmap.yaml
(+26 files in other folders)
