[metadata]
# replace with your username:
name = owlracerAPI
version = 0.0.2
author = Data Science
author_email = datascience@mathema.de
description = API for the owlracer project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.11.*

[options.packages.find]
where = src
